--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -7,8 +7,7 @@
 //
 
 body {
-  position: relative;
-  @apply font-rubik-regular text-polarnight-nord-3 dark:text-snowstorm-nord-4 bg-body-background dark:bg-body-backgrounddark;
+  @apply relative font-rubik-regular text-base text-polarnight-nord-3 dark:text-snowstorm-nord-4 bg-body-background dark:bg-body-backgrounddark;
 }
 
 // Liens
