💄 Change nav textual link into icons

--- a/assets/scss/base/_nuxt-content.scss
+++ b/assets/scss/base/_nuxt-content.scss
@@ -59,4 +59,9 @@ $content-heading-line-height: 1.125;
         // font-size: 1em;
         margin-bottom: 1em;
     }
+
+    ol,
+    ul{
+        list-style: inside;
+    }
 }
