♿️ Update button styles when focus

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -20,9 +20,12 @@ button {
   text-decoration-style: solid;
   transition: color 0.4s;
 
-  &:hover,
-  &:focus {
+  &:hover {
     @apply text-frost-nord-10 dark:text-snowstorm-nord-6;
     text-decoration-color: theme("colors.current");
+  }
+
+  &:focus {
+    @apply outline-dotted outline-current;
   }
 }
