💄 Update some styles

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -26,6 +26,8 @@ button {
   }
 
   &:focus {
-    @apply outline-dotted outline-current;
+    @apply outline-1 outline-offset-2 outline-dotted outline-current;
   }
 }
+
+
