--- a/assets/scss/base/_nuxt-content.scss
+++ b/assets/scss/base/_nuxt-content.scss
@@ -17,6 +17,7 @@ $content-heading-line-height: 1.125;
             margin-bottom: 1em;
         }
     }
+
     h1,
     h2,
     h3,
@@ -64,5 +65,15 @@ $content-heading-line-height: 1.125;
     ol,
     ul{
         list-style: inside;
+    }
+
+    blockquote {
+        @apply border-l-4 border-current pl-5 pt-1.5 pb-1;
+
+        p {
+            &:not(:last-child) {
+                margin-bottom: 0;
+            }
+        }
     }
 }
