--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -6,6 +6,58 @@
 // Time: 17:05
 //
 
+$nord-0: #2e3440;
+$nord-1: #3b4252;
+$nord-2: #434c5e;
+$nord-3: #4c566a;
+$nord-4: #d8dee9;
+$nord-5: #e5e9f0;
+$nord-6: #eceff4;
+$nord-7: #8fbcbb;
+$nord-8: #88c0d0;
+$nord-9: #81a1c1;
+$nord-10: #5e81ac;
+$nord-11: #bf616a;
+$nord-12: #d08770;
+$nord-13: #ebcb8b;
+$nord-14: #a3be8c;
+$nord-15: #b48ead;
+
+$nords: (
+  "nord-0": $nord-0,
+  "nord-1": $nord-1,
+  "nord-2": $nord-2,
+  "nord-3": $nord-3,
+  "nord-4": $nord-4,
+  "nord-5": $nord-5,
+  "nord-6": $nord-6,
+  "nord-7": $nord-7,
+  "nord-8": $nord-8,
+  "nord-9": $nord-9,
+  "nord-10": $nord-10,
+  "nord-11": $nord-11,
+  "nord-12": $nord-12,
+  "nord-13": $nord-13,
+  "nord-14": $nord-14,
+  "nord-15": $nord-15,
+);
+
+@each $name, $color in $nords {
+  :root {
+    --color-#{$name}: #{red($color)} #{green($color)} #{blue($color)};
+  }
+}
+
+:root {
+  --color-primary: #{red($nord-10) green($nord-10) blue($nord-10)};
+  --color-secondary: #{red($nord-11) green($nord-11) blue($nord-11)};
+}
+
+:root[class="dark"] {
+  --color-primary: #{red($nord-8) green($nord-8) blue($nord-8)};
+  --color-secondary: #{red($nord-11) green($nord-11) blue($nord-11)};
+}
+
 body {
   @apply relative font-rubik-regular text-base text-polarnight-nord-3 dark:text-snowstorm-nord-4 bg-body-background dark:bg-body-backgrounddark;
 }
@@ -13,7 +65,8 @@ body {
 // Liens
 a,
 button {
-  @apply text-polarnight-nord-3 dark:text-frost-nord-8 underline;
+  @apply text-[inherit] underline;
+
   text-decoration-color: theme("colors.current");
   text-decoration-thickness: from-font;
   text-underline-offset: 1px;
@@ -21,7 +74,7 @@ button {
   transition: color 0.4s;
 
   &:hover {
-    @apply text-frost-nord-10 dark:text-snowstorm-nord-6;
+    @apply text-primary;
     text-decoration-color: theme("colors.current");
   }
 
