💄Add color vars from Mirrorful

--- a/.mirrorful/theme.scss
+++ b/.mirrorful/theme.scss
@@ -1,19 +1,53 @@
 $color-my-super-color-base: #df01df;
 $color-nord-0-base: #2e3440;
-$color-nord-1-content: #2d3340;
 $color-nord-1-base: #3b4252;
 $color-nord-2-base: #434c5e;
 $color-nord-3-base: #4c566a;
-$color-nord-41-test: #d12626;
-$color-nord-41-base: #d8dee9;
+$color-nord-4-base: #d8dee9;
+$color-nord-5-base: #e5e9f0;
+$color-nord-6-base: #eceff4;
+$color-nord-7-base: #8fbcbb;
+$color-nord-8-base: #88c0d0;
+$color-nord-9-base: #81a1c1;
+$color-nord-10-base: #5e81ac;
+$color-nord-11-base: #bf616a;
+$color-nord-12-base: #d08770;
+$color-nord-13-base: #ebcb8b;
+$color-nord-14-base: #a3be8c;
+$color-nord-15-base: #b48ead;
+$color-primary-base: #5e81ac;
+$color-primary-content: #4f6f95;
+$color-secondary-base: #bf616a;
+$color-secondary-content: #ad525b;
+$color-primary-dark-base: #88c0d0;
+$color-primary-dark-content: #75afc0;
+$color-secondary-dark-base: #bf616a;
+$color-secondary-dark-content: #9d4951;
 
 :root {
   --color-my-super-color-base: #df01df;
   --color-nord-0-base: #2e3440;
-  --color-nord-1-content: #2d3340;
   --color-nord-1-base: #3b4252;
   --color-nord-2-base: #434c5e;
   --color-nord-3-base: #4c566a;
-  --color-nord-41-test: #d12626;
-  --color-nord-41-base: #d8dee9;
+  --color-nord-4-base: #d8dee9;
+  --color-nord-5-base: #e5e9f0;
+  --color-nord-6-base: #eceff4;
+  --color-nord-7-base: #8fbcbb;
+  --color-nord-8-base: #88c0d0;
+  --color-nord-9-base: #81a1c1;
+  --color-nord-10-base: #5e81ac;
+  --color-nord-11-base: #bf616a;
+  --color-nord-12-base: #d08770;
+  --color-nord-13-base: #ebcb8b;
+  --color-nord-14-base: #a3be8c;
+  --color-nord-15-base: #b48ead;
+  --color-primary-base: #5e81ac;
+  --color-primary-content: #4f6f95;
+  --color-secondary-base: #bf616a;
+  --color-secondary-content: #ad525b;
+  --color-primary-dark-base: #88c0d0;
+  --color-primary-dark-content: #75afc0;
+  --color-secondary-dark-base: #bf616a;
+  --color-secondary-dark-content: #9d4951;
 }
