--- a/assets/scss/base/_nuxt-content.scss
+++ b/assets/scss/base/_nuxt-content.scss
@@ -52,14 +52,17 @@ $content-heading-line-height: 1.125;
     h4 {
         // font-size: 1.25em;
         margin-bottom: 0.8em;
+        &:not(:first-child) {
+            margin-top: 1.125em;
+        }
     }
     h5 {
         // font-size: 1.125em;
-        margin-bottom: 0.8888em;
+        margin-bottom: 0.6em;
     }
     h6 {
         // font-size: 1em;
-        margin-bottom: 1em;
+        margin-bottom: 0.5em;
     }
 
     ol,
