--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -52,3 +52,9 @@ button {
   }
 }
 
+// optional - enable smooth scrolling
+@media screen and (prefers-reduced-motion: no-preference) {
+  html {
+    scroll-behavior: smooth;
+  }
+}
