--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -55,6 +55,6 @@ button {
 // optional - enable smooth scrolling
 @media screen and (prefers-reduced-motion: no-preference) {
   html {
-    scroll-behavior: smooth;
+    //scroll-behavior: smooth;
   }
 }
