--- a/assets/scss/base/_fonts.scss
+++ b/assets/scss/base/_fonts.scss
@@ -9,8 +9,8 @@
 @font-face {
   font-family: "rubik_blackregular";
   font-display: swap;
-  src: url("~/assets/fonts/rubik-black-webfont.woff2") format("woff2"),
-    url("~/assets/fonts/rubik-black-webfont.woff") format("woff");
+  src: url("/fonts/rubik-black-webfont.woff2") format("woff2"),
+    url("/fonts/rubik-black-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -18,8 +18,8 @@
 @font-face {
   font-family: "rubikbold";
   font-display: swap;
-  src: url("~/assets/fonts/rubik-bold-webfont.woff2") format("woff2"),
-    url("~/assets/fonts/rubik-bold-webfont.woff") format("woff");
+  src: url("/fonts/rubik-bold-webfont.woff2") format("woff2"),
+    url("/fonts/rubik-bold-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -27,8 +27,8 @@
 @font-face {
   font-family: "rubik_mediumregular";
   font-display: swap;
-  src: url("~/assets/fonts/rubik-medium-webfont.woff2") format("woff2"),
-    url("~/assets/fonts/rubik-medium-webfont.woff") format("woff");
+  src: url("/fonts/rubik-medium-webfont.woff2") format("woff2"),
+    url("/fonts/rubik-medium-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -36,8 +36,8 @@
 @font-face {
   font-family: "rubikregular";
   font-display: swap;
-  src: url("~/assets/fonts/rubik-regular-webfont.woff2") format("woff2"),
-    url("~/assets/fonts/rubik-regular-webfont.woff") format("woff");
+  src: url("/fonts/rubik-regular-webfont.woff2") format("woff2"),
+    url("/fonts/rubik-regular-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
@@ -45,8 +45,8 @@
 @font-face {
   font-family: "rubik_lightregular";
   font-display: swap;
-  src: url("~/assets/fonts/rubik-light-webfont.woff2") format("woff2"),
-    url("~/assets/fonts/rubik-light-webfont.woff") format("woff");
+  src: url("/fonts/rubik-light-webfont.woff2") format("woff2"),
+    url("/fonts/rubik-light-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
