--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,40 +1,40 @@
-//
-//
-// Created by PhpStorm.
-// User: pascal
-// Date: 2019-07-16
-// Time: 17:05
-//
 
 // Nord css variables
-@each $name, $color in $nords {
-  :root {
-    --color-#{$name}: #{red($color)} #{green($color)} #{blue($color)};
-  }
-}
+//@each $name, $color in $nords {
+//  :root {
+//    --color-#{$name}: #{hue($color)} #{saturation($color)} #{lightness($color)};
+//  }
+//}
+//
+//// Named colors
+//:root {
+//  --color-primary: #{hue($nord-10) saturation($nord-10) lightness($nord-10)};
+//  --color-primary-content: #{hue(darken($nord-10, 10%)) saturation(darken($nord-10, 10%)) lightness(darken($nord-10, 10%))};
+//  --color-secondary: #{hue($nord-11) saturation($nord-11) lightness($nord-11)};
+//  --color-secondary-content: #{hue(darken($nord-11, 10%)) saturation(darken($nord-11, 10%)) lightness(darken($nord-11, 10%))};
+//}
+//
+//.dark {
+//  --color-primary: #{hue($nord-8) saturation($nord-8) lightness($nord-8)};
+//  --color-primary-content: #{hue(lighten($nord-8, 10%)) saturation(lighten($nord-8, 10%)) lightness(lighten($nord-8, 10%))};
+//  --color-secondary: #{hue($nord-11) saturation($nord-11) lightness($nord-11)};
+//}
+//
+//// Backgrounds
+//:root {
+//  --color-body-background: #{hue(#f2f4f8) saturation(#f2f4f8) lightness(#f2f4f8)};
+//}
+//
+//.dark {
+//  --color-body-background: #{hue(#242933) saturation(#242933) lightness(#242933)};
+//}
 
-:root {
-  --toto: 41 46 57;
-  --tutu: 32 36 45;
-}
-
-// Named colors
-:root {
-  --color-primary: #{red($nord-10) green($nord-10) blue($nord-10)};
-  --color-primary-content: #{red(darken($nord-10, 10%)) green(darken($nord-10, 10%)) blue(darken($nord-10, 10%))};
-  --color-secondary: #{red($nord-11) green($nord-11) blue($nord-11)};
-  --color-secondary-content: #{red(darken($nord-11, 10%)) green(darken($nord-11, 10%)) blue(darken($nord-11, 10%))};
-
-  &[class="dark"] {
-    --color-primary: #{red($nord-8) green($nord-8) blue($nord-8)};
-    --color-primary-content: #{red(lighten($nord-8, 10%)) green(lighten($nord-8, 10%)) blue(lighten($nord-8, 10%))};
-    --color-secondary: #{red($nord-11) green($nord-11) blue($nord-11)};
-  }
+html {
+  @apply antialiased text-base;
 }
 
 body {
-  @apply relative font-body text-base text-polarnight-nord-3 bg-body-background
-  dark:text-snowstorm-nord-4  dark:bg-body-backgrounddark;
+  @apply relative font-body text-base text-body-txt bg-body-background;
 }
 
 // Liens
@@ -49,7 +49,7 @@ button {
   transition: color 0.4s;
 
   &:hover {
-    @apply text-primary;
+    @apply text-accent;
     text-decoration-color: theme("colors.current");
   }
 
