--- a/assets/scss/base/_fonts.scss
+++ b/assets/scss/base/_fonts.scss
@@ -12,26 +12,26 @@
         $family: "rubik-light",
 );
 
-@include Rubik.faces(
+/*@include Rubik.faces(
         $subsets: latin,
         $weights: 400,
         $styles: normal,
         $family: "rubik-regular",
-);
+);*/
 
-@include Rubik.faces(
+/*@include Rubik.faces(
         $subsets: latin,
         $weights: 500,
         $styles: normal,
         $family: "rubik-medium",
-);
+);*/
 
-@include Rubik.faces(
+/*@include Rubik.faces(
         $subsets: latin,
         $weights: 700,
         $styles: normal,
         $family: "rubik-bold"
-);
+);*/
 
 @include Rubik.faces(
         $subsets: latin,
