--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -6,9 +6,6 @@
 // Time: 11:49
 //
 
-body {
-    @apply antialiased;
-}
 
 h1,
 .h1,
@@ -22,7 +19,7 @@ h5,
 .h5,
 h6,
 .h6 {
-    @apply text-polarnight-nord-1 dark:text-snowstorm-nord-4 font-rubik-black leading-none uppercase;
+    @apply text-polarnight-nord-1 dark:text-snowstorm-nord-4 font-display leading-none uppercase tracking-tight;
 }
 
 h1,
@@ -79,6 +76,6 @@ h6,
     }
 }
 
-strong {
+/*strong {
   @apply font-rubik-bold;
-}
+}*/
