--- a/assets/scss/components/_btn.scss
+++ b/assets/scss/components/_btn.scss
@@ -8,7 +8,7 @@
 
 .btn {
     text-decoration: none;
-    @apply font-rubik-medium text-sm py-2 px-4 rounded text-center inline-flex;
+    @apply font-medium text-sm py-2 px-4 rounded text-center inline-flex;
 
     &--black {
         @apply bg-black text-white border border-black;;
