--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -19,7 +19,7 @@ h5,
 .h5,
 h6,
 .h6 {
-    @apply text-polarnight-nord-1 dark:text-snowstorm-nord-4 font-display leading-none uppercase tracking-tight;
+    @apply text-polarnight-nord-1 dark:text-snowstorm-nord-4 font-display font-black leading-none uppercase tracking-tight;
 }
 
 h1,
