feat: Add music page
WIP

--- a/assets/scss/abstracts/_tokens.scss
+++ b/assets/scss/abstracts/_tokens.scss
@@ -11,7 +11,8 @@ $body-text: $nord-3;
 $body-text-dark: $nord-4;
 
 // Texts
-$text-muted-color: $color-gray-600;
+$text-muted-color: $color-gray-500;
+$text-muted-color-dark: $color-gray-400;
 
 // Fonts
 //$font-family-body: $font-family-sans;
