--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -29,6 +29,23 @@ button {
   }
 }
 
+// Blank target links
+/*a[target="_blank"] {
+  @apply inline-flex items-baseline;
+  &::after {
+    @apply ml-1 h-[0.8em] w-[0.8em] block fill-current shrink-0;
+    content: '';
+    mask: url("~/assets/images/icons/external-link.svg") no-repeat center;
+    background-color: currentColor;
+    //mask-size: contain;
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    mask-position: 0 0.1em;
+    line-height: 0;
+  }
+}*/
+
+
 // optional - enable smooth scrolling
 @media screen and (prefers-reduced-motion: no-preference) {
   html {
