feat: Add cv into cover

--- a/assets/scss/components/_wrapper-outline.scss
+++ b/assets/scss/components/_wrapper-outline.scss
@@ -1,5 +1,5 @@
 
 .wrapper-outline {
-  @apply px-4 py-2.5 text-xl leading-[0px] bg-body-background rounded-lg
+  @apply px-4 py-2.5 bg-body-background rounded-lg
   ring-1 ring-inset ring-snowstorm-nord-4 dark:ring-polarnight-nord-2;
 }
