--- a/assets/scss/components/_index.scss
+++ b/assets/scss/components/_index.scss
@@ -6,6 +6,6 @@
 // Time: 10:25
 //
 
-@import "btn";
-@import "wrapper-outline";
-@import "badge";
+@use "btn";
+@use "wrapper-outline";
+@use "badge";
