--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -22,3 +22,11 @@
 }
 
 
+/*
+@layer utilities {
+  .heading {
+    @apply text-polarnight-nord-1 dark:text-snowstorm-nord-4 font-display font-black leading-none uppercase tracking-tight;
+  }
+}
+*/
+
